--- a/style.css
+++ b/style.css
@@ -213,6 +213,11 @@ header.shadow .logo{
     object-fit: cover;
     object-position: center;
     border-radius: 0.5rem;
+    opacity: 0.5;
+}
+
+.post-img:hover{
+    opacity: 1.0;
 }
 
 .category{
@@ -230,6 +235,33 @@ header.shadow .logo{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {
+    background-color: var(--second-color);
+    color: white;
+    font-weight: 300;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .post-date{
@@ -268,6 +300,10 @@ header.shadow .logo{
 .profile-name{
     font-size: .8rem;
     font-weight: 500;
+}
+
+.profile-name:hover{
+    color: var(--second-color);
 }
 
 footer{
@@ -367,7 +403,7 @@ footer p{
 }
 
 .quicklinks ul li a:hover{
-    color: #fff;
+    color: var(--second-color);
 }
 
 .footer-container .contactBx{
@@ -394,6 +430,10 @@ footer p{
     color: #999;
 }
 
+.contactBx .info li span:hover{
+    color: var(--second-color);
+}
+
 .contactBx .info li a{
     color: #999;
     text-decoration: none;
@@ -401,7 +441,7 @@ footer p{
 }
 
 .contactBx .info li a:hover{
-    color: #fff;
+    color: var(--second-color);
 }
 
 @media (max-width: 1060px){
