--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+JP:wght@100..900&display=swap');
 *{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -100,7 +101,7 @@ header.shadow .logo{
 .home{
     width: 100%;
     min-height: 440px;
-    background: url("Assets/banner.png");
+    background: url("Assets/bluebg2x.jpg");
     display: grid;
     justify-content: center;
     align-items: center;
@@ -113,11 +114,14 @@ header.shadow .logo{
 
 .home-title{
     font-size: 3.5rem;
+    text-shadow: 2px 3px #1877f2;
 }
 
 .home-subtitle{
+    color: var(--bg-color);
     font-size: 1rem;
     font-weight: 400;
+    text-shadow: 2px 3px #1877f2;
 }
 
 .about{
@@ -147,14 +151,108 @@ header.shadow .logo{
     font-size: 1em;
 }
 
-.about .imgBx{
+/*.about .imgBx{
     position: relative;
     min-width: 50%;
     width: 50%;
     min-height: 500px;
+}*/
+
+.about .imgBx {
+    position: relative;
+    min-width: 50%;
+    width: 50%;
+    min-height: 500px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.imgBx img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    transition: transform 0.5s;
+
+    border: 10px solid transparent; 
+
+    border-image-source: url(Assets/bg2x.jpg);
+    border-image-slice: 30;
+    border-image-repeat: round;
+}
+
+.imgBx:hover img {
+    transform: scale(1.1);
+}
+
+.layer {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0, 123, 255, 0.8)); /* Blue gradient */
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+    transition: height 0.5s, opacity 0.5s;
+    color: white;
+    opacity: 0;
+    z-index: 1;
+}
+
+.imgBx:hover .layer {
+    height: 100%;
+    opacity: 1;
+}
+
+.layer h3, .layer p, .layer .social-link {
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.imgBx:hover .layer h3, .imgBx:hover .layer p, .imgBx:hover .layer .social-link {
+    opacity: 1;
+}
+
+.social-link {
+    color: #1877f2;
+    margin-top: 10px;
+    font-size: 24px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background: white;
+    border-radius: 50%;
+    border: 5px solid currentColor;
+    transition: transform 0.3s;
+    z-index: 2;
+    position: relative;
+}
+
+.social-link i {
+    font-size: 24px;
+    color: #1877f2; /* Facebook blue */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+}
+
+.social-link:hover {
+    transform: scale(1.2);
 }
 
 .btn2{
+    float: left;
+    margin-left: 5px;
     position: relative;
     display: inline-block;
     margin-top: 30px;
@@ -202,7 +300,7 @@ header.shadow .logo{
 
 .post-box{
     background: var(--bg-color);
-    box-shadow: 0 4px 14px hsl(35deg 25% 15% / 10%);
+    box-shadow: 0 4px 14px hsla(236, 96%, 11%, 0.527);
     padding: 15px;
     border-radius: 0.5rem;
 }
@@ -214,6 +312,14 @@ header.shadow .logo{
     object-position: center;
     border-radius: 0.5rem;
     opacity: 0.5;
+
+ 
+    border: 10px solid transparent; 
+
+
+    border-image-source: url(Assets/bg2x.jpg);
+    border-image-slice: 30;
+    border-image-repeat: round;
 }
 
 .post-img:hover{
@@ -235,6 +341,8 @@ header.shadow .logo{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    font-family: "Kanit", sans-serif;
+
 }
 
 .dropdown {
@@ -247,7 +355,7 @@ header.shadow .logo{
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 2;
 }
 .dropdown-content a {
     color: black;
@@ -280,6 +388,7 @@ header.shadow .logo{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    font-family: "Carrois Gothic SC", sans-serif;
 }
 
 .profile{
